Add Smart Agriculture project details
Added a new project section for 'Smart Agriculture' with details on the bear detection system and improvements to the YOLOv8 model.

--- a/index.html
+++ b/index.html
@@ -738,7 +738,30 @@
                 </div>
             </a>
 
-            <!-- Project 2 -->
+            <!-- Project 2: Smart Agriculture (NEW) -->
+            <a href="smart_agriculture.html" class="card" style="text-decoration: none; color: inherit;">
+                <div class="card-date" style="align-self: flex-start; margin-bottom: 15px;" data-lang-key="proj_agri_date">Sept 2023 - May 2024</div>
+                <h3 data-lang-key="proj_agri_title">Intelligent Agricultural Surveillance</h3>
+                <h4 data-lang-key="proj_agri_sub">Bear Harm Monitoring & Governance System</h4>
+                <div class="card-content">
+                    <ul>
+                        <li data-lang-key="proj_agri_d1">Deployed a bear detection and drive system on the <strong>Nvidia Jetson Nano</strong> platform.</li>
+                        <li data-lang-key="proj_agri_d2">Improved YOLOv8 model by adding <strong>DCNv3</strong> and <strong>Transformer</strong> module to improve detection accuracy.</li>
+                        <li data-lang-key="proj_agri_d3">Won the <strong>National Outstanding Prize</strong> in International College Student Intelligent Agricultural Equipment Innovation Competition.</li>
+                    </ul>
+                    <div class="btn-text">
+                        <span data-lang-key="btn_view_detail">View Project Details</span> <i class="fas fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="tech-stack">
+                    <span class="tech-tag">Jetson Nano</span>
+                    <span class="tech-tag">YOLOv8</span>
+                    <span class="tech-tag">LoRa</span>
+                    <span class="tech-tag">Electron</span>
+                </div>
+            </a>
+
+            <!-- Project 3 -->
             <div class="card">
                 <div class="card-date" style="align-self: flex-start; margin-bottom: 15px;" data-lang-key="proj_rover_date">Feb 2024 - June 2024</div>
                 <h3 data-lang-key="proj_rover_title">Smart Autonomous Rover</h3>
@@ -758,7 +781,7 @@
                 </div>
             </div>
 
-            <!-- Project 3 -->
+            <!-- Project 4 -->
             <div class="card">
                 <div class="card-date" style="align-self: flex-start; margin-bottom: 15px;" data-lang-key="proj_ctf_date">July 2022 - Oct 2022</div>
                 <h3 data-lang-key="proj_ctf_title">CTF Competitions (PWN)</h3>
@@ -778,7 +801,7 @@
                 </div>
             </div>
             
-            <!-- Project 4 -->
+            <!-- Project 5 -->
              <div class="card">
                 <div class="card-date" style="align-self: flex-start; margin-bottom: 15px;" data-lang-key="proj_img_date">Oct 2024</div>
                 <h3 data-lang-key="proj_img_title">Image Dehazing</h3>
@@ -897,6 +920,10 @@
                 proj_rtl_sub: "Agile Hardware Design based on Dataflow Graphs", proj_rtl_d1: "Surveyed HLS techniques and proposed a framework transforming data flow graphs into synthesizable RTL code.",
                 proj_rtl_d2: "Designed a Python-based compiler to generate software-to-hardware code for data flow verification.",
                 proj_rtl_d3: "Reduced PE array compilation time by up to <strong>30%</strong> compared to traditional HLS.",
+                proj_agri_date: "Sept 2023 - May 2024", proj_agri_title: "Intelligent Agricultural Surveillance", proj_agri_sub: "Bear Harm Monitoring & Governance System",
+                proj_agri_d1: "Deployed a bear detection and drive system on the <strong>Nvidia Jetson Nano</strong> platform.",
+                proj_agri_d2: "Improved YOLOv8 model by adding <strong>DCNv3</strong> and <strong>Transformer</strong> module to improve detection accuracy.",
+                proj_agri_d3: "Won the <strong>National Outstanding Prize</strong> in International College Student Intelligent Agricultural Equipment Innovation Competition.",
                 proj_rover_date: "Feb 2024 - June 2024", proj_rover_title: "Smart Autonomous Rover", proj_rover_sub: "Team Leader",
                 proj_rover_d1: "Developed a path-tracing rover using <strong>ROS2</strong> for modular communication between sensing, planning, and execution.",
                 proj_rover_d2: "Implemented a robust vision system based on <strong>OpenCV</strong>, achieving 98% accuracy in sign recognition.",
@@ -934,6 +961,10 @@
                 proj_rtl_sub: "基于数据流图的敏捷硬件设计", proj_rtl_d1: "调研 HLS 技术，提出了一种将数据流图转化为可综合 RTL 代码的框架。",
                 proj_rtl_d2: "设计了基于 Python 的编译器，生成软硬件代码以验证数据流。",
                 proj_rtl_d3: "相比传统 HLS，将 PE 阵列的编译时间减少了 <strong>30%</strong>。",
+                proj_agri_date: "2023年9月 - 2024年5月", proj_agri_title: "智能农业监视系统", proj_agri_sub: "熊害监测与治理系统",
+                proj_agri_d1: "在 <strong>Nvidia Jetson Nano</strong> 平台上部署了熊类检测和驱赶系统。",
+                proj_agri_d2: "通过添加 <strong>DCNv3</strong> 和 <strong>Transformer</strong> 模块改进了 YOLOv8 模型，提高了检测精度。",
+                proj_agri_d3: "在国际大学生智能农业装备创新大赛中荣获<strong>国家级特等奖</strong>。",
                 proj_rover_date: "2024年2月 - 2024年6月", proj_rover_title: "智能自主漫游车", proj_rover_sub: "团队负责人",
                 proj_rover_d1: "使用 <strong>ROS2</strong> 开发了路径追踪漫游车，实现了感知、规划和执行模块的通信。",
                 proj_rover_d2: "基于 <strong>OpenCV</strong> 实现了鲁棒的视觉系统，标志识别准确率达 98%。",
@@ -972,6 +1003,10 @@
                 proj_rtl_sub: "Conception Matérielle Agile basée sur Graphes de Flux de Données", proj_rtl_d1: "Proposition d'un cadre transformant les graphes de flux de données en code RTL synthétisable.",
                 proj_rtl_d2: "Compilateur Python conçu pour générer du code logiciel-matériel.",
                 proj_rtl_d3: "Réduction du temps de compilation des matrices PE de <strong>30%</strong>.",
+                proj_agri_date: "Sept 2023 - Mai 2024", proj_agri_title: "Surveillance Agricole Intelligente", proj_agri_sub: "Système de surveillance et de gouvernance des ours",
+                proj_agri_d1: "Déploiement d'un système de détection et d'expulsion des ours sur la plateforme <strong>Nvidia Jetson Nano</strong>.",
+                proj_agri_d2: "Amélioration du modèle YOLOv8 en ajoutant des modules <strong>DCNv3</strong> et <strong>Transformer</strong> pour améliorer la précision.",
+                proj_agri_d3: "A remporté le <strong>Prix National Exceptionnel</strong> lors de la compétition internationale d'innovation en équipement agricole intelligent.",
                 proj_rover_date: "Fév 2024 - Juin 2024", proj_rover_title: "Rover Autonome Intelligent", proj_rover_sub: "Chef d'équipe",
                 proj_rover_d1: "Développement d'un rover avec <strong>ROS2</strong> pour la communication modulaire.",
                 proj_rover_d2: "Système de vision robuste basé sur <strong>OpenCV</strong> (précision 98%).",
@@ -1010,6 +1045,10 @@
                 proj_rtl_sub: "Agil Hårdvarudesign baserad på Dataflödesgrafer", proj_rtl_d1: "Föreslog ett ramverk för att omvandla dataflödesgrafer till syntetiserbar RTL-kod.",
                 proj_rtl_d2: "Designade en Python-kompilator för verifiering av dataflöden.",
                 proj_rtl_d3: "Minskade kompileringstiden för PE-arrayer med upp till <strong>30%</strong>.",
+                proj_agri_date: "Sept 2023 - Maj 2024", proj_agri_title: "Intelligent Jordbruksövervakning", proj_agri_sub: "System för övervakning och hantering av björnhot",
+                proj_agri_d1: "Implementerade ett björndetektions- och drivsystem på <strong>Nvidia Jetson Nano</strong>-plattformen.",
+                proj_agri_d2: "Förbättrade YOLOv8-modellen genom att lägga till <strong>DCNv3</strong> och <strong>Transformer</strong>-moduler för ökad precision.",
+                proj_agri_d3: "Vann <strong>Nationellt Utmärkt Pris</strong> i internationell tävling för innovation inom intelligent jordbruksutrustning.",
                 proj_rover_date: "Feb 2024 - Juni 2024", proj_rover_title: "Smart Autonom Rover", proj_rover_sub: "Teamledare",
                 proj_rover_d1: "Utvecklade en rover med <strong>ROS2</strong> för modulär kommunikation.",
                 proj_rover_d2: "Implementerade robust visionsystem baserat på <strong>OpenCV</strong> (98% noggrannhet).",
